--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -3,11 +3,11 @@
   "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
-      "docset_name": "E2E_DocsBranch",
-      "build_source_folder": "E2E_DocsBranch",
-      "build_output_subfolder": "E2E_DocsBranch",
+      "docset_name": "E2E_ProvisionTemplate",
+      "build_source_folder": "E2E_ProvisionTemplate",
+      "build_output_subfolder": "E2E_ProvisionTemplate",
       "locale": "en-us",
-      "version": 0,
+      "monikers": [],
       "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
@@ -15,17 +15,18 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes"
+      "template_folder": "_themes",
+      "version": 0
     }
   ],
   "notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
-  "need_preview_pull_request": true,
+  "need_preview_pull_request": false,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
-      "url": "https://github.com/openpublish/templates.docs.msft",
+      "url": "https://github.com/Microsoft/templates.docs.msft",
       "branch": "master",
       "branch_mapping": {}
     }
